# STProject

./: CMakeLists.txt  README.md
src/: ChordDetectTest.cpp  ChordDetector.cpp  MarkovChain.cpp  MarkovChain.h  MarkovManager.cpp  MarkovManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Pruebas.cpp
